cmake_minimum_required(VERSION 4.0)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP main.cpp
        LAB-07/TaskNo1/currency_converter.h
        LAB-07/TaskNo1/currency_converter.cpp
        LAB-07/TaskNo1/main.cpp
        "LAB-07/TaskNo2/ design_example.h"
        LAB-07/TaskNo2/design_example.cpp
        LAB-07/TaskNo2/main.cpp
        Week-08/Problem1.cpp
        Week-08/Problem2.cpp
        Week-08/Problem1.cpp
        Assignments/Assignment-02/main.cpp)
